Turn off the alarmtimer before resetting the SIGALRM handler back to SIG_DFL. Fix from dieter roelants <dieter.NetBSD@pandora.be> Should fix PR 35630.